testdata/invalid/permute_invalid_04.lisp
;;error:3:23-24:malformed sort direction
(defcolumns (X :i16@prove))
(defpermutation (Z) ((? X)))
